syntax = "proto3";

package bytebase.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "generated-go/v1";

service AuthService {
  rpc Signup(SignupRequest) returns (SignupResponse) {
    option (google.api.http) = {
      post: "/v1/auth/signup"
      body: "*"
    };
  }
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/auth/login"
      body: "*"
    };
  }
  rpc Logout(LogoutRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/auth/logout"
      body: "*"
    };
  }
}

message SignupRequest {
  // email is the account email.
  string email = 1;
  // name is the name of the user.
  string name = 2;
  // password is the login password.
  string password = 3;
}

message SignupResponse {
}

message LoginRequest {
  string email = 1;

  string password = 2;

  // If web is set, we will set access token, refresh token, and user to the cookie.
  bool web = 3;
}

message LoginResponse {
  string token = 1;
}

message LogoutRequest {
}
