syntax = "proto3";

package bytebase.v1;

import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";

import "v1/common.proto";
import "v1/issue.proto";

option go_package = "generated-go/v1";

service OrgPolicyService {
  rpc GetPolicy(GetPolicyRequest) returns (Policy) {
    option (google.api.http) = {
      get: "/v1/{name=policies/*}"

      additional_bindings {
        get: "/v1/{name=projects/*/policies/*}"
      }
      additional_bindings {
        get: "/v1/{name=environments/*/policies/*}"
      }
      additional_bindings {
        get: "/v1/{name=environments/*/instances/*/policies/*}"
      }
      additional_bindings {
        get: "/v1/{name=environments/*/instances/*/databases/*/policies/*}"
      }
    };
    option (google.api.method_signature) = "name";
  }

  rpc ListPolicies(ListPoliciesRequest) returns (ListPoliciesResponse) {
    option (google.api.http) = {
      get: "/v1/policies"

      additional_bindings {
        get: "/v1/{parent=projects/*}/policies"
      }
      additional_bindings {
        get: "/v1/{parent=environments/*}/policies"
      }
      additional_bindings {
        get: "/v1/{parent=environments/*/instances/*}/policies"
      }
      additional_bindings {
        get: "/v1/{parent=environments/*/instances/*/databases/*}/policies"
      }
    };
    option (google.api.method_signature) = "";
  }
}

message GetPolicyRequest {
  // The name of the policy to retrieve.
  // Format: {resource type}/{resource id}/policies/{policy type}
  string name = 1 [(google.api.field_behavior) = REQUIRED];
}

message ListPoliciesRequest {
  // The parent, which owns this collection of policies.
  // Format: {resource type}/{resource id}/policies/{policy type}
  string parent = 1 [(google.api.field_behavior) = REQUIRED];

  // The maximum number of policies to return. The service may return fewer than
  // this value.
  // If unspecified, at most 50 policies will be returned.
  // The maximum value is 1000; values above 1000 will be coerced to 1000.
  int32 page_size = 2;

  // A page token, received from a previous `GetPolicies` call.
  // Provide this to retrieve the subsequent page.
  //
  // When paginating, all other parameters provided to `GetPolicies` must match
  // the call that provided the page token.
  string page_token = 3;
}

message ListPoliciesResponse {
  // The policies from the specified request.
  repeated Policy policies = 1;

  // A token, which can be sent as `page_token` to retrieve the next page.
  // If this field is omitted, there are no subsequent pages.
  string next_page_token = 2;
}

message Policy {
  // The name of the policy.
  // Format: {resource type}/{resource id}/policies/{policy type}
  string name = 1;

  // The system-assigned, unique identifier for a resource.
  string uid = 2 [(google.api.field_behavior) = OUTPUT_ONLY];

  State state = 3;

  bool inherit_from_parent = 4;

  PolicyType type = 5;

  oneof payload {
    PipelineApprovalPolicy pipeline_approval_policy = 6;
    BackupPlanPolicy backup_plan_policy = 7;
    SensitiveDataPolicy sensitive_data_policy = 8;
    AccessControlPolicy access_control_policy = 9;
    SQLReviewPolicy sql_review_policy = 10;
  }
}

enum PolicyType {
  POLICY_TYPE_UNSPECIFIED = 0;
  PIPELINE_APPROVAL = 1;
  BACKUP_PLAN = 2;
  SQL_REVIEW = 3;
  SENSITIVE_DATA = 4;
  ACCESS_CONTROL = 5;
}

message PipelineApprovalPolicy {
  PipelineApprovalValue value = 1;
  repeated AssigneeGroup assignee_group_list = 2;
}

message AssigneeGroup {
  IssueType issue_type = 1;
  AssigneeGroupValue value = 2;
}

enum AssigneeGroupValue {
  ASSIGNEE_GROUP_UNSPECIFIED = 0;
  WORKSPACE_OWNER_OR_DBA = 1;
  PROJECT_OWNER = 2;
}

enum PipelineApprovalValue {
  PIPELINE_APPROVAL_UNSPECIFIED = 0;
  MANUAL_APPROVAL_NEVER = 1;
  MANUAL_APPROVAL_ALWAYS = 2;
}

message BackupPlanPolicy {
  BackupPlanPolicySchedule schedule = 1;
  int32 retention_period_ts = 2;
}

enum BackupPlanPolicySchedule {
  SCHEDULE_UNSPECIFIED = 0;
  UNSET = 1;
  DAILY = 2;
  WEEKLY = 3;
}

message SensitiveDataPolicy {
  repeated SensitiveData sensitive_data_list = 1;
}

message SensitiveData {
  string table = 1;
  string column = 2;
  SensitiveDataMaskType mask_type = 3;
}

enum SensitiveDataMaskType {
  MASK_TYPE_UNSPECIFIED = 0;
  DEFAULT = 1;
}

message AccessControlPolicy {
  repeated AccessControlRule disallow_rule_list = 1;
}

message AccessControlRule {
  bool full_database = 1;
}

message SQLReviewPolicy {
  string name = 1;
  repeated SQLReviewRule rule_list = 2;
}

message SQLReviewRule {
  string type = 1;
  SQLReviewRuleLevel level = 2;
  string payload = 3;
}

enum SQLReviewRuleLevel {
  LEVEL_UNSPECIFIED = 0;
  ERROR = 1;
  WARNING = 2;
  DISABLED = 3;
}